# rawduck

./: AGENTS.md  BENCHMARK.md  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  PrValidation.yml  QuackIntegration.yml  Release.yml
agent_planning/: DUCKLAKE_NATIVE_RESEARCH.md
agent_planning/bench/: compare_storage_types.sh  gen_otlp.py  run_write_matrix.sh
docs/: MCP.md  SDK.md
scripts/: ab_bench_lib.sh  ci_benchmark_gate.sh  gen_compare_data.py  run_vs_release.sh  run_vs_release_stats.sh
skills/rawduck/: SKILL.md
src/: raw_api.cpp  raw_async.cpp  raw_attach.cpp  raw_grpc.cpp  raw_ingest.cpp  raw_insert.cpp  raw_json.cpp  raw_optimize.cpp  raw_otlp_pb.cpp  raw_quack_attach.cpp  raw_records.cpp  raw_scalars.cpp  raw_transforms.cpp  raw_write_settings.cpp  rawduck_extension.cpp
src/include/: raw_functions.hpp  raw_json.hpp  raw_write_settings.hpp  rawduck_extension.hpp
test/http/: raw_api_compat.sh
test/sql/: ducklake.test  raw_advanced.test  raw_api.test  raw_attach.test  raw_grpc.test  raw_ingest.test  raw_quack.test  raw_streaming.test  raw_write.test  rawduck.test
vcpkg_triplets/: arm64-linux.cmake  arm64-osx.cmake  x64-linux.cmake  x64-osx.cmake
